--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -32,22 +32,51 @@
 en:
   hello: "Hello world"
 
+  global:
+    delete: 'Delete'
+    public: 'Public'
+    private: 'Private'
+    status: 'Status'
+    email: 'E-mail'
+    username: 'Username'
+    password: 'Password'
+
+  navbar:
+    login: 'Login'
+    logout: 'Logout'
+    dashboard: 'Dashboard'
+    settings: 'Settings'
+
   # Landing page, a.k.a root page
   landing:
     title: "Let's generate"
-    enter_an_url: "Enter an URL"
-    generate: "Generate"
-    is_private: "Is private?"
+    enter_an_url: 'Enter an URL'
+    generate: 'Generate'
+    is_private: 'Is private?'
 
   # URL page
   show:
-    original_url: "Original URL"
-    shortened_link: "Shortened link"
-    status: "Status"
-    private: "Private"
-    public: "Public"
-    clicked: "Clicked"
+    original_url: 'Original URL'
+    shortened_link: 'Shortened link'
+    clicked: 'Clicked'
+
+  dashboard:
+    sidebar: 'Sidebar'
+    analytics: 'Analytics'
+    latest_url: 'Latest URL'
+    table:
+      original_url: 'Original URL'
+      generated_url: 'Generated URL'
+      created_at: 'Created at'
+      action: 'Action'
+    successfully_deleted: 'Successfully deleted...'
+
+  session:
+    logged_in_ok: 'Successfully you logged in to your account'
+    logged_out_ok: 'Successfully you logged out. Thank you.'
 
   error:
     short_link_not_found: "We didn't find this link. Make sure you have a valid short link."
-    something_went_wrong: "Something went wrong. Could you check the link for us?"
+    something_went_wrong: 'Something went wrong. Could you check the link for us?'
+    check_logs: 'Something went wrong. Please check your logs'
+    invalid_combination: 'Invalid email/password combination'
