dynamic password conf name added

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -40,6 +40,7 @@ en:
     email: 'E-mail'
     username: 'Username'
     password: 'Password'
+    password_confirmation: 'Password confirmation'
 
   navbar:
     login: 'Login'
